--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="col-md-12">
         <nav class="navbar navbar-dark nav-color p-1 mb-5 rounded fixed-top">
           <div class="container-fluid ">
-            <a class="navbar-brand text-dark titulo" href="index.html"><h5>ASAWI SANDWICHS</h5></a>
+            <a class="navbar-brand" href="index.html"><h5 class="titulo color1">ASAWI SANDWICHS</h5></a>
             <button class="navbar-toggler  " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
               aria-controls="offcanvasNavbar">
               <span class="navbar-toggler-icon"></span>
@@ -45,16 +45,16 @@
                     <a class="nav-link active" aria-current="page" href="index.html"><i>Inicio</a></i>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link color2" href="pages/quienes.html"><i>Quienes Somos</i></a>
+                    <a class="nav-link text-dark" href="pages/quienes.html"><i>Quienes Somos</i></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link color2" href="pages/sandwichs.html"><i>Sandwichs</i></a>
+                    <a class="nav-link text-dark" href="pages/sandwichs.html"><i>Sandwichs</i></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link color2" href="pages/horarios.html"><i>Horarios</i></a>
+                    <a class="nav-link text-dark" href="pages/horarios.html"><i>Horarios</i></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link color2" href="pages/contacto.html"><i>Contacto</a></i>
+                    <a class="nav-link text-dark" href="pages/contacto.html"><i>Contacto</a></i>
                   </li>
                 </ul>
                 </li>
