--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,7 +24,7 @@
       <div class="col-md-12">
         <nav class="navbar navbar-dark nav-color p-1 mb-5 rounded fixed-top">
           <div class="container-fluid ">
-            <a class="navbar-brand text-dark" href="contacto.html"><h5>CONTACTO</h5></a>
+            <a class="navbar-brand text-dark" href="contacto.html"><h5 class="titulo color1">CONTACTO</h5></a>
             <button class="navbar-toggler  " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
               aria-controls="offcanvasNavbar">
               <span class="navbar-toggler-icon"></span>
@@ -39,19 +39,19 @@
               <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../index.html"><i>Inicio</a></i>
+                    <a class="nav-link text-dark" aria-current="page" href="../index.html"><i>Inicio</a></i>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/quienes.html"><i>Quienes Somos</i></a>
+                    <a class="nav-link text-dark" href="../pages/quienes.html"><i>Quienes Somos</i></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/sandwichs.html"><i>Sandwichs</i></a>
+                    <a class="nav-link text-dark" href="../pages/sandwichs.html"><i>Sandwichs</i></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="../pages/horarios.html"><i>Horarios</i></a>
+                    <a class="nav-link text-dark" href="../pages/horarios.html"><i>Horarios</i></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/contacto.html"><i>Contacto</a></i>
+                    <a class="nav-link active" href="../pages/contacto.html"><i>Contacto</a></i>
                   </li>
                 </ul>
                 </li>
@@ -73,20 +73,20 @@
   <main class="container">
     <div class="row ">
       <div class="col-md-12 d-flex justify-content-center">
-        <img src="../images/session2.jpg" alt="Contacto" width="900" class="img-fluid pb-3">
+        <img src="../images/contacto1.jpeg" alt="Contacto" width="550">
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-md-9">
         <div class="mb-3">
           <h2 class="text-white font d-flex justify-content-center pt-4">DEPOSITE SUS DUDAS AQUI</h2>
-          <label for="exampleFormControlInput1" class="form-label text-white">E-mail</label>
+          <label for="exampleFormControlInput1" class="form-label color3">E-mail</label>
           <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
         </div>
         <div class="mb-3">
-          <label for="exampleFormControlTextarea1" class="form-label text-white">Consulta</label>
+          <label for="exampleFormControlTextarea1" class="form-label color3">Consulta</label>
           <textarea class="form-control pb-5" id="exampleFormControlTextarea1" rows="3"></textarea>
-          <input type="submit" value="Enviar"> <input type="reset" value="Limpiar"></input>
+          <input type="submit" class="color3 btn" value="Enviar"> <input type="reset" class="color3 btn" value="Limpiar"></input>
 
         </div>
       </div>
