--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -24,7 +24,7 @@
       <div class="col-md-12">
         <nav class="navbar navbar-dark nav-color p-1 mb-5 rounded fixed-top">
           <div class="container-fluid ">
-            <a class="navbar-brand text-dark titulo" href="horarios.html"><h5>NUESTROS HORARIOS</h5></a>
+            <a class="navbar-brand" href="horarios.html"><h5 class="titulo color1">NUESTROS HORARIOS</h5></a>
             <button class="navbar-toggler  " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
               aria-controls="offcanvasNavbar">
               <span class="navbar-toggler-icon"></span>
@@ -39,19 +39,19 @@
               <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                   <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="../index.html"><i>Inicio</a></i>
+                    <a class="nav-link text-dark" aria-current="page" href="../index.html"><i>Inicio</a></i>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link " href="../pages/quienes.html"><i>Quienes Somos</i></a>
+                    <a class="nav-link text-dark" href="../pages/quienes.html"><i>Quienes Somos</i></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link " href="../pages/sandwichs.html"><i>Sandwichs</i></a>
+                    <a class="nav-link text-dark" href="../pages/sandwichs.html"><i>Sandwichs</i></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="../pages/horarios.html"><i>Horarios</i></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link " href="../pages/contacto.html"><i>Contacto</a></i>
+                    <a class="nav-link text-dark" href="../pages/contacto.html"><i>Contacto</a></i>
                   </li>
                 </ul>
                 </li>
