--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -73,7 +73,7 @@
   <main class="container">
     <div class="row ">
       <div class="col-md-12 d-flex justify-content-center">
-        <img src="../images/contacto1.jpeg" alt="Contacto" width="550">
+        <img src="../images/contacto1.jpeg" alt="Contacto" width="550" class="img-fluid">
       </div>
     </div>
     <div class="row d-flex justify-content-center">
